--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # Ignorer tous les fichiers .Rmd
 *.Rmd
 *.tex
+*.csv
 
 # Ignorer le dossier Images, ressources
-Images/
 ressources/
 resultats/
+Cours6_files
